HTML: Actualizei o artigo 'Sobre' e 'Ajuda' (sobretudo Esvaziar ficha). CSS: Defini uma hierarquia de z-index para os elementos com position fixed. JS: Modifiquei o métodos do menu (Realçar totais, Esvaziar e Imprimir ficha), de backup da ficha na Local Storage e de totalização acrescentando variáveis e definindo nomes mais sugestivos.

--- a/anatomia/ficha.css
+++ b/anatomia/ficha.css
@@ -134,6 +134,19 @@
     overflow: hidden;
 }
 
+@media screen and (max-width: 1023px) {
+    .ficha__col--pos-sticky {
+        position: sticky;
+        left: -15px;
+        background-color: var(--gray--d);
+        z-index: 333;
+    }
+
+    .ficha__col-de-indicadores {
+        background-color: var(--yt);
+    }
+}
+
 .ficha__indicador {
     display: flex;
     align-items: center;
