--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -102,13 +102,14 @@ body.--overflow-h {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: calc(var(--layout-width) + 24px);
+        padding-left: 12px;
     }
 }
 
 .header {
     line-height: 2;
     box-shadow: 0 0 10px var(--gray--d);
-    z-index: 1;
 }
 
 .header__logo {
@@ -130,12 +131,6 @@ body.--overflow-h {
 }
 
 /* MENU */
-@media screen and (min-width: 1297px) {
-    .header__menu {
-        margin-right: -10px;
-    }
-}
-
 .header__menu__ul {
     width: 100%;
     display: flex;
@@ -195,6 +190,7 @@ body.--overflow-h {
 .header__menu__label {
     padding: 7.5px 12px 7.5px 0;
     font-size: 12px;
+    min-height: 44px;
 }
 
 .header__menu__btn {
@@ -203,6 +199,7 @@ body.--overflow-h {
     background-color: inherit;
     color: var(--cor-de-texto);
     font-size: 12px;
+    min-height: 44px;
 }
 
 
@@ -349,18 +346,15 @@ input[data-totaleixoy]:focus,
     color: var(--gray)
 }
 
-
 /* LINHA DE REFERENCIA */
 .reference-container {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: var(--black--alpha-8);
-    z-index: 999;
+    background-color: var(--reference-bgc);
+    z-index: 666;
 }
-
-
 
 .reference-row {
     display: grid;
@@ -395,10 +389,6 @@ input[data-totaleixoy]:focus,
 
     .reference-row__output {
         margin: 0px;
-    }
-
-    .reference-row__output--indicador {
-        padding-left: 15px;
     }
     
     .reference-row__label {
@@ -441,7 +431,7 @@ input[data-totaleixoy]:focus,
     right: 0;
     top: 42px;
     overflow-y: scroll;
-    z-index: 1000;
+    z-index: 999;
     padding-bottom: 100px;
     display: none;
 }
@@ -455,7 +445,7 @@ input[data-totaleixoy]:focus,
         top: calc(50vh - 90vh / 2);
         right: calc(50vw - 700px / 2);
         overflow-y: auto;
-        z-index: 1000;
+        z-index: 999;
         display: none;
     }
 }
@@ -473,7 +463,8 @@ input[data-totaleixoy]:focus,
     padding: 0 10px;
     position: fixed;
     top: 56px;
-    right: 2px;
+    right: 3px;
+    z-index: 1000;
     background-color: transparent;
 }
 
@@ -516,6 +507,7 @@ input[data-totaleixoy]:focus,
         top: 0;
         background-color: var(--yt);
         width: 100%;
+        z-index: 999;
     }
 
     .artigo--ajuda details {
@@ -652,10 +644,8 @@ details mark {
 
 .details__moldura__legenda {
     font-size: 12px;
-    font-style: italic;
-    margin-top: 5px;
+    margin-top: 15px;
 }
-
 .details-salvar-ficha-como-pdf li {
     line-height: 2;
 }
@@ -672,7 +662,7 @@ details mark {
     position: fixed;
     right: calc(50vw - (var(--layout-width) + 15px) / 2);
     bottom: -164px;
-    z-index: 50000;
+    z-index: 999;
     visibility: hidden;
     transition: bottom 150ms;
 }
@@ -700,12 +690,6 @@ details mark {
 .dialog-box-default.--open {
     bottom: 20px;
     visibility: visible
-}
-
-@media print {
-    .dialog-box-default.--open {
-        visibility: hidden;
-    }
 }
 
 .dialog-box-default--small.--open {
@@ -759,10 +743,16 @@ details mark {
     background-color: var(--gray--4);
     position: fixed;
     top: -35px;
-    right: calc(50vw - 257px / 2);
+    right: calc(50vw - 230px / 2);
     visibility: hidden;
     transition: top .2s linear;
-    z-index: 999;
+    z-index: 666;
+}
+
+@media screen and (max-width: 1023px) {
+    .dialog-box-ir-para {
+        right: calc(50vw - 241px / 2);
+    }
 }
 
 .dialog-box-ir-para.--open {
@@ -771,9 +761,9 @@ details mark {
 }
 
 .dialog-box-ir-para__input-linha {
-    min-width: 188px;
+    width: 188px;
     padding: 2px 0 2px 5px;
-    border: 2px solid var(--cor-primaria);
+    border: 2px solid var(--gray--4);
     background-color: var(--gray--d);
     text-align: left;
     font-size: 12px;
@@ -783,33 +773,41 @@ details mark {
     border-color: var(--purple);
 }
 
-.dialog-box-ir-para__btn-fechar {
+.dialog-box-ir-para__btn {
     width: 24px;
-    height: 20px;
+    margin: 0 2px;
     font-weight: 700;
-    background-color: inherit;
-    color: var(--yt);
-    font-size: 16px;
-    margin-left: 2px
-}
-
-.dialog-box-ir-para__btn-fechar:hover {
-    background-color: var(--cor-de-risco);
-    border-radius: 2px
 }
 
 @media screen and (max-width: 1023px) {
-    .dialog-box-ir-para__btn-ir {
+    .dialog-box-ir-para__btn {
         width: 35px;
     }
+}
 
-    .dialog-box-ir-para__btn-fechar {
-        width: 30px;
-    }
+.dialog-box-ir-para__btn:active {
+    opacity: .7;
+}
 
-    .dialog-box-ir-para {
-        right: calc(50vw - 276px / 2);
-    }
+.dialog-box-ir-para__btn:hover {
+    border-radius: 2px;
+    background-color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--ir {
+    font-size: 14px;
+    border-radius: 1px;
+}
+
+.dialog-box-ir-para__btn--fechar {
+    height: 20px;
+    font-size: 16px;
+    background-color: inherit;
+    color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--fechar:hover {
+    background-color: var(--cor-de-risco);
 }
 
 .dialog-box-esvaziar-ficha {
@@ -822,7 +820,7 @@ details mark {
     background: var(--yt);
     top: calc(50vh - 443px / 2);
     right: calc(50vw - 375px / 2);
-    z-index: 50000;
+    z-index: 999;
     position: fixed;
     overflow: auto;
     display: none;
@@ -953,12 +951,12 @@ details mark {
     position: fixed;
     top: 0;
     background-color: var(--black--alpha-5);
-    z-index: 999;
+    z-index: 888;
 }
 
 @media print {
     @page {
-        margin: .5cm .5cm .62cm .5cm;
+        margin: .5cm;
         size: A4 landscape;
     }
 
